--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>SHAK Nairobi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,60 +13,83 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
+		<!-- wrapper -->
 			<div id="wrapper" class="fade-in">
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+				<!-- intro -->
+					<div class="intro" id="intro">
+						<h1><span class="yellow-text">shak<br />
+						nairobi</span></h1>
+						<p class="bright-text bold">Spina Bifida & Hydrocephalus Association of Kenya (SHAK), Nairobi.<br> Providing hope to families of persons with Spina bifida and Hydrocephalus.</p>
+						<p class="dark-text bold">Care ~ Hope ~ Healing</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li>
+								<a href="#header" class="button icon solid solo fa-arrow-down scrolly">Learn More</a>
+							</li>
 						</ul>
 					</div>
 
-				<!-- Header -->
+				<!-- header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Learn More</a>
 					</header>
 
-				<!-- Nav -->
+				<!-- nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active">
+								<a href="index.html">Programs</a>
+							</li>
+							<li>
+								<a href="generic.html">About</a>
+							</li>
+							<li>
+								<a href="elements.html">Partners</a>
+							</li>
+							<li>
+								<a href="elements.html">Programs</a>
+							</li>
+							<li>
+								<a href="elements.html">Contacts</a>
+							</li>
+							<li>
+								<a href="elements.html">Donate</a>
+							</li>
+							<li>
+								<a href="elements.html">Get Involved</a>
+							</li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li>
+								<a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+							</li>
+							<li>
+								<a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+							</li>
+							<li>
+								<a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
+							</li>
 						</ul>
 					</nav>
 
-				<!-- Main -->
+				<!-- main -->
 					<div id="main">
 
-						<!-- Featured Post -->
+						<!-- featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date bold">January 26, 2023</span>
+									<h2><a href="#">House of Hope<br />
+									</a>Nairobi</h2>
+									<p>Alex Solomon from Baringo County in Kenya is seven months old. He was born with Hydrocephalus at the Marigat District Hospital to Purity Jelimo as the fourth child. Purity, a stay at home mom raises her four children with her husband who is a pastoralist...</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/1.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large">Continue</a></li>
 								</ul>
 							</article>
 
-						<!-- Posts -->
+						<!-- posts -->
 							<section class="posts">
 								<article>
 									<header>
