added story1 to posts

--- a/index.html
+++ b/index.html
@@ -30,45 +30,23 @@
 					</div>
 
 				<!-- header -->
-					<header id="header">
-						<a href="index.html" class="logo">Learn More</a>
-					</header>
+					<header id="header"><a href="index.html" class="logo">Learn More</a></header>
 
 				<!-- nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active">
-								<a href="index.html">Programs</a>
-							</li>
-							<li>
-								<a href="generic.html">About</a>
-							</li>
-							<li>
-								<a href="elements.html">Partners</a>
-							</li>
-							<li>
-								<a href="elements.html">Programs</a>
-							</li>
-							<li>
-								<a href="elements.html">Contacts</a>
-							</li>
-							<li>
-								<a href="elements.html">Donate</a>
-							</li>
-							<li>
-								<a href="elements.html">Get Involved</a>
-							</li>
+							<li class="active"><a href="index.html">Programs</a></li>
+							<li><a href="generic.html">About</a></li>
+							<li><a href="elements.html">Partners</a></li>
+							<li><a href="elements.html">Programs</a></li>
+							<li><a href="elements.html">Contacts</a></li>
+							<li><a href="elements.html">Donate</a></li>
+							<li><a href="elements.html">Get Involved</a></li>
 						</ul>
 						<ul class="icons">
-							<li>
-								<a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
-							</li>
-							<li>
-								<a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-							</li>
-							<li>
-								<a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
-							</li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -85,7 +63,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/1.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Continue</a></li>
+									<li><a href="story1.html" class="button large">Continue</a></li>
 								</ul>
 							</article>
 
