modified index.html links

--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Programs</a></li>
-							<li><a href="generic.html">About</a></li>
-							<li><a href="elements.html">Partners</a></li>
-							<li><a href="elements.html">Programs</a></li>
-							<li><a href="elements.html">Contacts</a></li>
-							<li><a href="elements.html">Donate</a></li>
-							<li><a href="elements.html">Get Involved</a></li>
+							<li><a href="index.html">About us</a></li>
+							<li><a href="index.html">Partners</a></li>
+							<li><a href="index.html">Spina bifida & Hydrocephalus</a></li>
+							<li><a href="index.html">Get Involved</a></li>
+							<li><a href="index.html">Donate Now</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
