--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- wrapper -->
 			<div id="wrapper" class="fade-in">
-
+				<div class="test">
+					<div class="top"></div>
+					<div class="middle"></div>
+					<div class="bottom"></div>
+				</div>
+				
 				<!-- intro -->
 					<div class="intro" id="intro">
 						<h1><span class="yellow-text">shak<br />
