--- a/index.html
+++ b/index.html
@@ -14,17 +14,12 @@
 	<body class="is-preload">
 		<!-- wrapper -->
 			<div id="wrapper" class="fade-in">
-				<div class="test">
-					<div class="top"></div>
-					<div class="middle"></div>
-					<div class="bottom"></div>
-				</div>
 				
 				<!-- intro -->
 					<div class="intro" id="intro">
-						<h1><span class="yellow-text">shak<br />
+						<h1><span class="bright-text">shak<br />
 						nairobi</span></h1>
-						<p class="bright-text bold">Spina Bifida & Hydrocephalus Association of Kenya (SHAK), Nairobi.<br> Providing hope to families of persons with Spina bifida and Hydrocephalus.</p>
+						<p class="yellow-text bold">Spina Bifida & Hydrocephalus Association of Kenya (SHAK), Nairobi.<br> Providing hope to families of persons with Spina bifida and Hydrocephalus.</p>
 						<p class="dark-text bold">Care ~ Hope ~ Healing</p>
 						<ul class="actions">
 							<li>
