added about.html file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<nav id="nav">
 					<ul class="links">
 						<li class="active"><a href="index.html">Programs</a></li>
-						<li><a href="index.html">About us</a></li>
+						<li><a href="about.html">About us</a></li>
 						<li><a href="index.html">Partners</a></li>
 						<li><a href="index.html">Spina bifida & Hydrocephalus</a></li>
 						<li><a href="index.html">Get Involved</a></li>
@@ -215,6 +215,7 @@
 					<ul>
 						<li><a href="https://onyangojoseph.github.io/synergy/">Synergy Apps Inc</a></li>
 						<li>&copy; 2023</li>
+						<li>All rights Reserved</li>
 					</ul>
 				</div>
 			</div>
