styled first paragraph of folic acid section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								</div>
 							</div>
 							<div class="folic-acid">
-								<div class="subtitle center">
+								<div>
 									<h2 class="subtitle center">Yellow (Folic Acid)</h2>
 									<p class="dark bold side-gap">The yellow on our logo signifies the folic acid supplement, a primary component in the prevention of Spina Bifida and Hydrocephalus. It also symbolizes happiness, warmth and sunshine restoring hope to people with Spina Bifida & Hydrocephalus and their families.</p>
 								</div>
