modified index.html and about.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
-	SHAK Nairobi website
-	Synergy Apps Inc.
+	shak nairobi website
+	synergy apps inc.
 -->
 <html>
 	<head>
@@ -13,7 +13,7 @@
 		<meta name="description" content="Synergy Apps Inc. © 2023">
 		<meta name="author" content="https://www.onyangojoseph.github.io/profolio/">
 		<!-- title -->
-		<title>SHAK Nairobi</title>
+		<title>Home | SHAK Nairobi</title>
 		<!-- favicon -->
 		<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 		<!-- css -->
@@ -107,19 +107,19 @@
 						</div>
 						<div class="folic-acid">
 							<div>
-								<h2 class="subtitle center">Yellow (Folic Acid)</h2>
-								<p class="dark bold side-gap">The yellow on our logo signifies the folic acid supplement, a primary component in the prevention of Spina Bifida and Hydrocephalus. It also symbolizes happiness, warmth and sunshine restoring hope to people with Spina Bifida & Hydrocephalus and their families.</p>
+								<h3 class="subtitle center">Yellow (Folic Acid)</h3>
+								<p class="dark bold  medium">The yellow on our logo signifies the folic acid supplement, a primary component in the prevention of Spina Bifida and Hydrocephalus. It also symbolizes happiness, warmth and sunshine restoring hope to people with Spina Bifida & Hydrocephalus and their families.</p>
 							</div>
 							<div>
-								<h2 class="subtitle center">White (Peace)</h2>
-								<p class="dark bold side-gap">The white background is a firm foundation rooted on peace. It's also a symbolism to the purity and innocence of children born or diagnosed with Spina Bifida and Hydrocephalus who wrongfully face rejection, discrimination and stigmatization.</p>
+								<h3 class="subtitle center">White (Peace)</h3>
+								<p class="dark bold  medium">The white background is a firm foundation rooted on peace. It's also a symbolism to the purity and innocence of children born or diagnosed with Spina Bifida and Hydrocephalus who wrongfully face rejection, discrimination and stigmatization.</p>
 							</div>
 							<div>
-								<h2 class="subtitle center">Black (Africa)</h2>
-								<p class="dark bold side-gap">The black text and image of a spinal cord, in empathy, portray the survival struggles of children born or diagnosed with Spina Bifida and Hydrocephalus in Africa and other developing countries outside Africa.</p>
+								<h3 class="subtitle center">Black (Africa)</h3>
+								<p class="dark bold  medium">The black text and image of a spinal cord, in empathy, portray the survival struggles of children born or diagnosed with Spina Bifida and Hydrocephalus in Africa and other developing countries outside Africa.</p>
 							</div>		
 						</div>
-					</div>
+					</div><br>
 					<blockquote>At SHAK Nairobi, we find lots of value in the lives of people living with Spina Bifida and Hydrocephalus. For the last 20 years, we have been a catalyst in supporting people living with Spina Bifida & Hydrocephalus and their families. We’ve been greatly inspired by our founder's story which led to the formation of SHAK.</blockquote>
 					<div class="row blockquote-btn">
 						<div class="col-6 col-12-small">
@@ -129,7 +129,7 @@
 						</div>
 					</div>	
 					<hr />
-					<h2 class="subtitle"><u>TAKING PRIDE IN OUR NUMBERS</u></h2>
+					<h2 class="subtitle center"><u>TAKING PRIDE IN OUR NUMBERS</u></h2><br>
 					<div class="table-wrapper">
 						<table class="alt">
 							<thead>
@@ -150,6 +150,7 @@
 							</tbody>
 						</table>
 					</div>
+					<hr />
 					<div class="row">
 						<div class="col-6 col-12-small">
 							<h3 class="subtitle">Partnerships</h3>
@@ -170,7 +171,7 @@
 							<iframe width="600" height="300" src="https://www.youtube.com/embed/xb5vaq2daRQ" title="Spina Bifida Cystica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						</div><br>
 						<div class="col-6 col-12-small">
-							<p class="dark bold">At SHAK Nairobi, our collective action amplifies the strength for change and a better tomorrow. We believe, you too can take part in making a difference with us. Your support is a huge driver of the admirable work we do to address the challenges facing people living with Spina Bifida and Hydrocephalus. Join us and make a lasting impact.</p>
+							<p class="dark bold medium">At SHAK Nairobi, our collective action amplifies the strength for change and a better tomorrow. We believe, you too can take part in making a difference with us. Your support is a huge driver of the admirable work we do to address the challenges facing people living with Spina Bifida and Hydrocephalus. Join us and make a lasting impact.</p>
 						</div>
 						<div class="col-6 col-12-small get-involved-btn">
 							<ul class="actions stacked">
@@ -178,13 +179,9 @@
 							</ul>
 						</div>
 					</div>	
-						
-
 				</section>
-
 			</div>
-
-			<!-- Footer -->
+			<!-- footer -->
 			<footer id="footer">
 				<section>
 					<form method="post" action="https://formsubmit.co/houseofhopenairobi@gmail.com">
@@ -232,8 +229,7 @@
 					</section>
 				</section>
 			</footer>
-
-			<!-- Copyright -->
+			<!-- copyright -->
 			<div id="copyright">
 				<ul>
 					<li><a href="https://onyangojoseph.github.io/synergy/">Synergy Apps Inc</a></li>
@@ -242,8 +238,7 @@
 				</ul>
 			</div>
 		</div>
-
-		<!-- Scripts -->
+		<!-- scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrollex.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -251,6 +246,5 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
