--- a/about.html
+++ b/about.html
@@ -429,60 +429,61 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
+				<!-- footer -->
+			<footer id="footer">
+				<section>
+					<form method="post" action="https://formsubmit.co/houseofhopenairobi@gmail.com">
+						<div class="fields">
+							<div class="field">
+								<label for="name">Name</label>
+								<input type="text" name="name" id="name" placeholder="Full Names" />
+							</div>
+							<div class="field">
+								<label for="email">Email</label>
+								<input type="text" name="email" id="email" placeholder="Email Address"/>
+							</div>
+							<div class="field">
+								<label for="message">Message</label>
+								<textarea name="message" id="message" rows="3" placeholder="Type here..."></textarea>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><input type="submit" value="Submit" /></li>
+						</ul>
+					</form>
+				</section>
+				<section class="split contact">
+					<section class="alt">
+						<h3>Address</h3>
+						<p>Ngummo Golf Course Phase 2<br />
+						House 497</p>
+					</section>
+					<section>
+						<h3>Telephone</h3>
+						<p>(072) 541-7990</p>
+					</section>
+					<section>
+						<h3>Email</h3>
+						<p>info@shaknairobi.org</p>
+					</section>
+					<section>
+						<h3>Socials</h3>
+						<ul class="icons alt">
+							<li><a href="#" class="icon fb brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon inst brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon yt brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+							<li><a href="#" class="icon in brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						</ul>
+					</section>
+				</section>
+			</footer>
+			<!-- copyright -->
+			<div id="copyright">
+				<ul>
+					<li><a href="https://onyangojoseph.github.io/synergy/">Synergy Apps Inc</a></li>
+					<li>&copy; 2023</li>
+					<li>All rights Reserved</li>
+				</ul>
 			</div>
 
 		<!-- Scripts -->
